# dataEngieneeringParsers

./: .gitignore  README.md  pyproject.toml
dataengieneeringparsers/parsercsv/: parsingcsv.py
dataengieneeringparsers/test_files/: test_file_csv.csv
dataengieneeringparsers/validator_csv/: run.py  validation_csv.py
