[tool.poetry]
name = "dataengieneeringparsers"
version = "0.1.0"
description = "A brief description of your project"
authors = ["turekradek <turekradek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

